tests/golden/openshift/openshift/openshift/10_mimir_distributed/mimir-distributed/templates/gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: openshift
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mimir
    app.kubernetes.io/version: 3.0.4
    helm.sh/chart: mimir-distributed-6.0.6
  name: openshift-mimir-gateway
  namespace: openshift
spec:
  rules:
    - host: metrics-receive.example.com
      http:
        paths:
          - backend:
              service:
                name: openshift-mimir-gateway
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - metrics-receive.example.com
      secretName: metrics-receive-example-com-tls
