tests/golden/openshift/openshift/openshift/10_mimir_distributed/mimir-distributed/templates/gateway/gateway-pdb.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: openshift
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mimir
    app.kubernetes.io/version: 2.17.0
    helm.sh/chart: mimir-distributed-5.8.0
  name: openshift-mimir-gateway
  namespace: openshift
spec:
  maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: openshift
      app.kubernetes.io/name: mimir
