tests/golden/openshift/openshift/openshift/10_mimir_distributed/mimir-distributed/templates/gateway/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: openshift
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mimir
    app.kubernetes.io/version: 2.17.0
    helm.sh/chart: mimir-distributed-5.8.0
  name: openshift-mimir-gateway
  namespace: openshift
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http-metrics
      port: 80
      protocol: TCP
      targetPort: http-metrics
    - name: legacy-http-metrics
      port: 8080
      protocol: TCP
      targetPort: http-metrics
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: openshift
    app.kubernetes.io/name: mimir
  type: ClusterIP
